# actix-web-todo-app

./: .env  .gitignore  Cargo.toml  README.md  db.sqlite  index.md  package-lock.json  package.json  rollup.config.js  rustfmt.toml
migrations/2021-02-26-042658_create_user_table/: down.sql  up.sql
migrations/2021-02-26-042735_create_todo_table/: up.sql
migrations/2022-02-22-082237_create_users_table/: down.sql  up.sql
migrations/2022-02-22-082241_create_todo_table/: down.sql  up.sql
migrations/2025-04-11-023231_alter_users_table_password_hash_field_to_97_chars/: down.sql  up.sql
src/: forms.rs  lib.rs  main.rs
src/db/: models.rs  schema.rs
src/middleware/: mod.rs
src/scopes/: api_scope.rs  main_scope.rs  mod.rs
static/css/: all.min.css  app-styles.css  index-styles.css  inter-display.css  inter.css  iosevka-fixed.css  iosevka-term-slab.css  styles.css
static/js/: app.js  toastFlashedMessages.js  toggleDarkMode.js
static/js/React Components/: CreateTodoButton.js  CreateTodoForm.js  DeleteTodoButton.js  EditTodoButton.js  EditTodoForm.js  Modal.js  Todo.js  TodoContentsInput.js  TodoDropdownMenu.js  TodoList.js  TodoTitleInput.js  UpdateTodoStatusButton.js  ViewTodoButton.js
svelte-src/: app.js  todoApi.js
svelte-src/components/: App.svelte  CreateTodoButton.svelte  CreateTodoModal.svelte  DeleteTodoModal.svelte  DropdownItem.svelte  EditTodoModal.svelte  Modal.svelte  Todo.svelte  TodoDropdownMenu.svelte  TodoList.svelte  ViewTodoModal.svelte
templates/: app.html  base.html  index.html  login.html  signup.html
