[package]
name = "actix-web-todo-app"
version = "0.6.0"
authors = ["SL-Lee <45960387+SL-Lee@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
rand_core = "0.6.4"
serde = "1.0.158"
serde_json = "1.0.94"
tera = "1.18.1"
uuid = { version = "1.3.0", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
