[package]
name = "actix-web-todo-app"
version = "0.6.0"
authors = ["SL-Lee <45960387+SL-Lee@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
rand_core = "0.6.4"
serde = "1.0.197"
serde_json = "1.0.115"
tera = "1.19.1"
uuid = { version = "1.8.0", features = ["serde"] }
validator = { version = "0.18.0", features = ["derive"] }
