[package]
name = "actix-web-todo-app"
version = "0.6.0"
authors = ["SL-Lee <45960387+SL-Lee@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
rand_core = "0.6.4"
serde = "1.0.219"
serde_json = "1.0.140"
tera = "1.20.0"
uuid = { version = "1.16.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
